chore: added swagger docs for implemented endpoints
