# api/controller/signup_controller.go
@@ -10,6 +10,17 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
+// @Summary		User Signup
+// @Description	Signs up a new user by validating the fields and returns their access token and refresh token
+// @Tags			Authentication
+// @Accept			json
+// @Produce		json
+// @Param			signUpRequest	body		domain.SignUpRequest	true	"SignUp Request Payload"
+// @Success		201				{object}	domain.SignUpResponse	"Signup successful, returns access and refresh tokens"
+// @Failure		400				{object}	domain.ErrorResponse	"Bad Request - Invalid or missing parameters in the request"
+// @Failure		409				{object}	domain.ErrorResponse	"Conflict - User already exists"
+// @Failure		500				{object}	domain.ErrorResponse	"Internal Server Error - Issue processing the request"
+// @Router			/auth/signup/	 [post]
 func (signUpController *SignUpController) SignUp(c echo.Context) error {
 	var request domain.SignUpRequest
 	err := c.Bind(&request)
